--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
             <artifactId>javafx-fxml</artifactId>
             <version>12.0.1</version>
         </dependency>
-
-
+        <!--Bluecove for linux & mac(?)
         <dependency>
             <groupId>net.sf.bluecove</groupId>
             <artifactId>bluecove</artifactId>
@@ -32,6 +31,14 @@
             <artifactId>bluecove-gpl</artifactId>
             <version>2.1.0</version>
         </dependency>
+-->
+        <!--BlueCove for Windows and mac(?)-->
+        <dependency>
+            <groupId>io.ultreia</groupId>
+            <artifactId>bluecove</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -79,7 +86,7 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.3</version>
+                <version>0.0.4</version>
                 <configuration>
                     <mainClass>com.bachelor.Launcher</mainClass>
                 </configuration>
@@ -89,6 +96,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
+                    <finalName>Wiibalance</finalName>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -107,7 +115,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 </project>
