--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,19 @@
         <dependency>
             <groupId>net.sf.bluecove</groupId>
             <artifactId>bluecove</artifactId>
+            <version>2.1.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/bluecove-2.1.2.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>io.ultreia</groupId>
+            <artifactId>bluecove</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <!--
+        <dependency>
+            <groupId>net.sf.bluecove</groupId>
+            <artifactId>bluecove</artifactId>
             <version>2.1.0</version>
         </dependency>
         <dependency>
@@ -33,14 +46,13 @@
             <artifactId>bluecove-gpl</artifactId>
             <version>2.1.0</version>
         </dependency>
-
+        -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
